[gd_scene load_steps=10 format=3 uid="uid://bkord615et2cp"]

[ext_resource type="Script" path="res://Scripts/Window/pc_describe.gd" id="1_nacno"]
[ext_resource type="Theme" uid="uid://danre0tbddxgh" path="res://Sprites/global_theme.tres" id="2_4oga2"]
[ext_resource type="Texture2D" uid="uid://bw4q0a1v3tt85" path="res://Sprites/Rectangular_Window.png" id="3_pk781"]
[ext_resource type="Texture2D" uid="uid://b14xt22mwytxw" path="res://Sprites/arrow.png" id="4_3jy3o"]
[ext_resource type="Texture2D" uid="uid://cvrmy76owb47i" path="res://Sprites/arrow2.png" id="5_xmpes"]
[ext_resource type="Texture2D" uid="uid://bmiwf3duovxi3" path="res://Sprites/Rect_Bar.png" id="6_1rxfk"]
[ext_resource type="Texture2D" uid="uid://hyxvwhk3vtw7" path="res://Sprites/small_grey_square.png" id="7_m432p"]
[ext_resource type="SpriteFrames" uid="uid://bq4qxl53eom0y" path="res://Sprites/damage_animation.tres" id="8_ak4ru"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28nby"]
size = Vector2(100, 74)

[node name="PcDescribe" type="Node2D"]
script = ExtResource("1_nacno")

[node name="Back" type="NinePatchRect" parent="."]
offset_left = -50.0
offset_top = -6.0
offset_right = 51.0
offset_bottom = 79.0
theme = ExtResource("2_4oga2")
texture = ExtResource("3_pk781")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 32
patch_margin_bottom = 10

[node name="Label" type="Label" parent="Back"]
layout_mode = 0
offset_top = 11.0
offset_right = 101.0
offset_bottom = 24.0
text = "The Describer"
horizontal_alignment = 1

[node name="LeftArrow" type="TextureButton" parent="Back"]
layout_mode = 0
offset_left = 1.0
offset_top = 40.0
offset_right = 101.0
offset_bottom = 140.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_3jy3o")
texture_pressed = ExtResource("4_3jy3o")
texture_hover = ExtResource("4_3jy3o")
texture_disabled = ExtResource("4_3jy3o")
texture_focused = ExtResource("4_3jy3o")

[node name="RightArrow" type="TextureButton" parent="Back"]
layout_mode = 0
offset_left = 90.0
offset_top = 40.0
offset_right = 190.0
offset_bottom = 140.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("5_xmpes")
texture_pressed = ExtResource("5_xmpes")
texture_hover = ExtResource("5_xmpes")
texture_disabled = ExtResource("5_xmpes")
texture_focused = ExtResource("5_xmpes")

[node name="FileName" type="Label" parent="Back"]
layout_mode = 0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 5
text = "FileName"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Desc" type="Label" parent="Back"]
layout_mode = 0
offset_left = 12.0
offset_top = 30.0
offset_right = 89.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 4
text = "Description Description Description Description Description Description Description Description Description Description Description Description "
horizontal_alignment = 1
autowrap_mode = 2

[node name="Uibar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -5.0
offset_right = 50.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Draggable_Bar" type="NinePatchRect" parent="Uibar"]
layout_mode = 0
offset_top = -1.0
offset_right = 101.0
offset_bottom = 10.0
texture = ExtResource("6_1rxfk")
patch_margin_left = 10
patch_margin_right = 40

[node name="Minimize" type="TextureButton" parent="Uibar"]
layout_mode = 0
offset_left = 70.0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 9.0
texture_normal = ExtResource("7_m432p")
texture_pressed = ExtResource("7_m432p")
texture_hover = ExtResource("7_m432p")
texture_disabled = ExtResource("7_m432p")
texture_focused = ExtResource("7_m432p")

[node name="Delete" type="TextureButton" parent="Uibar"]
layout_mode = 0
offset_left = 90.0
offset_top = -1.0
offset_right = 100.0
offset_bottom = 9.0
texture_normal = ExtResource("7_m432p")
texture_pressed = ExtResource("7_m432p")
texture_hover = ExtResource("7_m432p")
texture_disabled = ExtResource("7_m432p")
texture_focused = ExtResource("7_m432p")

[node name="Maximize" type="TextureButton" parent="Uibar"]
layout_mode = 0
offset_left = 80.0
offset_top = -1.0
offset_right = 90.0
offset_bottom = 9.0
texture_normal = ExtResource("7_m432p")
texture_pressed = ExtResource("7_m432p")
texture_hover = ExtResource("7_m432p")
texture_disabled = ExtResource("7_m432p")
texture_focused = ExtResource("7_m432p")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 41)
shape = SubResource("RectangleShape2D_28nby")
debug_color = Color(0.521944, 0.534274, 0.578207, 0.42)

[node name="Damage" type="AnimatedSprite2D" parent="."]
position = Vector2(0.250002, 41)
scale = Vector2(0.995, 0.73)
sprite_frames = ExtResource("8_ak4ru")

[connection signal="pressed" from="Back/LeftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="Back/RightArrow" to="." method="_on_right_arrow_pressed"]
